# nsmlib

./: .gitignore  CMakeLists.txt  LICENSE
filesystem/: filesystem.hpp
math/: core.hpp  matrix.hpp  quat.hpp  trig.hpp  vector.hpp
nsm/: core.hpp  math.hpp  matrix.hpp  trig.hpp  vector.hpp
test/: main.cpp
window/: ns_immediate_gui.hpp  nswindow.hpp
